feat: refactorizacion de incidentes, categorias, tipos y email