@@ -8,51 +8,94 @@ import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/incidente-evidencias")
 @RequiredArgsConstructor
 public class IncidenteEvidenciaController {
 
-    private final IncidenteEvidenciaService service;
+    private final IncidenteEvidenciaService evidenciaService;
     private final IncidentesMapper mapper;
 
+    @PreAuthorize("hasAnyRole('ADMINISTRADOR','TECNICO','ANALISTA_SEGURIDAD')")
     @GetMapping
     public ResponseEntity<List<IncidenteEvidenciaDto.Response>> findAll() {
-        return ResponseEntity.ok(service.findAll().stream()
-                .map(mapper::toResponse).collect(Collectors.toList()));
+
+        List<IncidenteEvidenciaDto.Response> response =
+                evidenciaService.findAll()
+                        .stream()
+                        .map(mapper::toResponse)
+                        .toList();
+
+        return ResponseEntity.ok(response);
     }
 
+    @PreAuthorize("hasAnyRole('ADMINISTRADOR','TECNICO','ANALISTA_SEGURIDAD')")
     @GetMapping("/{id}")
-    public ResponseEntity<IncidenteEvidenciaDto.Response> findById(@PathVariable Integer id) {
-        return service.findById(id).map(mapper::toResponse)
-                .map(ResponseEntity::ok).orElse(ResponseEntity.notFound().build());
+    public ResponseEntity<IncidenteEvidenciaDto.Response> findById(
+            @PathVariable Integer id) {
+
+        return evidenciaService.findById(id)
+                .map(mapper::toResponse)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 
+    @PreAuthorize("hasAnyRole('ADMINISTRADOR','TECNICO')")
     @PostMapping
-    public ResponseEntity<IncidenteEvidenciaDto.Response> create(@Valid @RequestBody IncidenteEvidenciaDto.Request request) {
-        IncidenteEvidencia saved = service.save(mapper.toEntity(request));
-        return ResponseEntity.status(HttpStatus.CREATED).body(mapper.toResponse(saved));
+    public ResponseEntity<IncidenteEvidenciaDto.Response> create(
+            @Valid @RequestBody IncidenteEvidenciaDto.Request request) {
+
+        IncidenteEvidencia evidencia =
+                mapper.toEntity(request);
+
+        IncidenteEvidencia saved =
+                evidenciaService.crear(evidencia);
+
+        return ResponseEntity
+                .status(HttpStatus.CREATED)
+                .body(mapper.toResponse(saved));
     }
 
+    @PreAuthorize("hasAnyRole('ADMINISTRADOR','TECNICO')")
     @PutMapping("/{id}")
-    public ResponseEntity<IncidenteEvidenciaDto.Response> update(@PathVariable Integer id, @Valid @RequestBody IncidenteEvidenciaDto.Request request) {
-        return service.findById(id).map(existing -> {
-            mapper.updateEntityFromRequest(request, existing);
-            return ResponseEntity.ok(mapper.toResponse(service.save(existing)));
-        }).orElse(ResponseEntity.notFound().build());
+    public ResponseEntity<IncidenteEvidenciaDto.Response> update(
+            @PathVariable Integer id,
+            @Valid @RequestBody IncidenteEvidenciaDto.Request request) {
+
+        return evidenciaService.findById(id)
+                .map(existing -> {
+
+                    mapper.updateEntityFromRequest(
+                            request,
+                            existing
+                    );
+
+                    IncidenteEvidencia updated =
+                            evidenciaService.actualizar(existing);
+
+                    return ResponseEntity.ok(
+                            mapper.toResponse(updated)
+                    );
+                })
+                .orElse(ResponseEntity.notFound().build());
     }
 
+    @PreAuthorize("hasRole('ADMINISTRADOR')")
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> delete(@PathVariable Integer id) {
-        if (service.findById(id).isPresent()) {
-            service.deleteById(id);
-            return ResponseEntity.noContent().build();
+    public ResponseEntity<Void> delete(
+            @PathVariable Integer id) {
+
+        if (evidenciaService.findById(id).isEmpty()) {
+            return ResponseEntity.notFound().build();
         }
-        return ResponseEntity.notFound().build();
+
+        evidenciaService.deleteById(id);
+
+        return ResponseEntity.noContent().build();
     }
 }
